--- a/blogs/template/index.html
+++ b/blogs/template/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kaptian Core Blog - Project Name</title>
+  <title>Kaptian Core Blog - Blog Name</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -72,15 +72,15 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="intro-title mb-4">Project Name</h2>
+          <h2 class="intro-title mb-4">Blog Details</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="#">Home</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="#">Projects</a>
+              <a href="#">Blogs</a>
             </li>
-            <li class="breadcrumb-item active">Project Name</li>
+            <li class="breadcrumb-item active">Blog Name</li>
           </ol>
         </div>
       </div>
@@ -99,7 +99,7 @@
                 <img src="https://via.placeholder.com/1000x666" class="img-fluid" alt="">
               </div>
               <div class="post-meta">
-                <h1 class="article-title">Project Name</h1>
+                <h1 class="article-title">Lorem ipsum dolor sit amet consec tetur adipisicing</h1>
                 <ul>
                   <li>
                     <span class="ion-ios-person"></span>
