Update Blog Name

--- a/projects/template/index.html
+++ b/projects/template/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kaptian Core Blog - Project Name</title>
+  <title>Kaptian Core - Zeus Bot</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
